Finished home page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header>
             <a href="#"><img src="images/crissy-logo.png" class="logo"></a>
             <ul class="navigation">
-                <li><a href="#">Something</a></li>
-                <li><a href="#">Something</a></li>
-                <li><a href="#">Something</a></li>
-                <li><a href="#">Something</a></li>
+                <li><a href="#">Store</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Readings</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </header>
 
