--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
     <section class="main">
         <header>
             <a href="#"><img src="images/crissy-logo.png" class="logo"></a>
+            <div class="toggle"></div>
             <ul class="navigation">
                 <li><a href="#">Store</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="#">Readings</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
